Enable proxy headers parsing for Gnocchi
http_proxy_to_wsgi middleware was recently added to Gnocchi [1] and
in order to take it into use, we need to enable it via hiera.

[1] Ic5526cf37e70335fa2cc70946a271253f227f129
Related-Bug: #1590608

Change-Id: I145dcfa3455ca1541cbf6b5fc4b601f0813619c0

--- a/puppet/services/gnocchi-api.yaml
+++ b/puppet/services/gnocchi-api.yaml
@@ -77,6 +77,7 @@ outputs:
                   - 8041
                   - 13041
             gnocchi::api::enabled: true
+            gnocchi::api::enable_proxy_headers_parsing: true
             gnocchi::api::service_name: 'httpd'
             gnocchi::keystone::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
             gnocchi::keystone::authtoken::auth_url: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
