Enable proxy headers parsing for Aodh
http_proxy_to_wsgi middleware was recently added to Aodh [1] and
in order to take it into use, we need to enable it via hiera.

[1] If2ada8a94c8e1ceacd4509605b4cd766a78f71d5
Depends-On: I0981e152700ed4511b797011ebe18e857c1fed71
Related-Bug: #1590608

Change-Id: Ie9605ae1e5437f488802b03ca23a325866f0ceb5
(cherry picked from commit 81576e9dd98f4854a0232e96ee7ee7e2ff4ddb57)

--- a/puppet/services/aodh-api.yaml
+++ b/puppet/services/aodh-api.yaml
@@ -60,6 +60,7 @@ outputs:
                 params:
                   $NETWORK: {get_param: [ServiceNetMap, AodhApiNetwork]}
             aodh::api::service_name: 'httpd'
+            aodh::api::enable_proxy_headers_parsing: true
             tripleo.aodh_api.firewall_rules:
               '128 aodh-api':
                 dport:
