Enable proxy headers parsing for Ceilometer
http_proxy_to_wsgi middleware was recently added to Ceilometer [1] and
in order to take it into use, we need to enable it via hiera.

[1] I24f16dda49bd9e7930ca9f0d32bf0793463aff03
Depends-On: I1812a27202ba3714b354aeb27611d38def87a7fc
Related-Bug: #1590608

Change-Id: If8de25afa13de6797895f36c98ffdde8cf3e8656
(cherry picked from commit dd14a8c490afbc10bfd49840894bf7c76e81d358)

--- a/puppet/services/ceilometer-api.yaml
+++ b/puppet/services/ceilometer-api.yaml
@@ -68,6 +68,7 @@ outputs:
             # internal_api_uri -> [IP]
             # internal_api_subnet - > IP/CIDR
           - ceilometer::api::service_name: 'httpd'
+            ceilometer::api::enable_proxy_headers_parsing: true
             ceilometer::api::host: {get_param: [ServiceNetMap, CeilometerApiNetwork]}
             ceilometer::wsgi::apache::bind_host: {get_param: [ServiceNetMap, CeilometerApiNetwork]}
             ceilometer::wsgi::apache::ssl: false
