Set nova service_name via t-h-t
with the move to use httpd instead of eventlet, We now add this
parameter in t-h-t to be able to clean it up from the puppet-tripleo
manifest.

Change-Id: Ic229182cc5c887b57f6182c3db1bac8bed330f7c
Depends-On: I4603b81d30a704b07eef461b3cdbfe164614b04f

--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -109,6 +109,7 @@ outputs:
           # internal_api_uri -> [IP]
           # internal_api_subnet - > IP/CIDR
           nova::api::api_bind_address: {get_param: [ServiceNetMap, NovaApiNetwork]}
+          nova::api::service_name: 'httpd'
           nova::wsgi::apache::ssl: false
           nova::wsgi::apache::bind_host: {get_param: [ServiceNetMap, NovaApiNetwork]}
           nova::wsgi::apache::servername:
