Modify the constraint to allow single quote for DPDK core list param
DPDK core list has to be give a string. For multiple cores, it
be given as "'1,2'". But the constraint does not allow ' (single
quote) to be set in the string. Modifying the constraint pattern.
Closes-Bug: #1633433

Depends-On: I01bf15b3c689b4fd0cdd848cf264dd9794e1d828
Change-Id: Ide2194d9ef5c10e276fa1a634919dfb286e483d6
(cherry picked from commit 1884d2a01c3fae195439918df2a1ea3f201b8893)

--- a/puppet/services/neutron-ovs-dpdk-agent.yaml
+++ b/puppet/services/neutron-ovs-dpdk-agent.yaml
@@ -22,7 +22,7 @@ parameters:
     description: List of cores to be used for DPDK Poll Mode Driver
     type: string
     constraints:
-      - allowed_pattern: "[0-9,-]+"
+      - allowed_pattern: "'[0-9,-]+'"
   NeutronDpdkMemoryChannels:
     description: Number of memory channels to be used for DPDK
     type: string
