heat-api-cfn endpoint is created to RegionOne instead of regionOne
When deploying, heat-api-cfn is assigned to RegionOne. This leads to a
bad user experience when logging into horizon, because if RegionOne is
selected by default, the users finds all menus empty (no computing, or
anything else).

Thanks to trown for finding out the issue.

Closes-Bug: 1633524

Change-Id: Ic108280f6b0875ffec10be6f696669962fb82e6b
(cherry picked from commit 74317f2b966d6c91150cb33666be7d15e2b31ffe)

--- a/puppet/services/heat-api-cfn.yaml
+++ b/puppet/services/heat-api-cfn.yaml
@@ -81,4 +81,4 @@ outputs:
           heat::keystone::auth_cfn::internal_url: {get_param: [EndpointMap, HeatCfnInternal, uri]}
           heat::keystone::auth_cfn::admin_url: {get_param: [EndpointMap, HeatCfnAdmin, uri]}
           heat::keystone::auth_cfn::password: {get_param: HeatPassword}
-          heat::keystone::auth::region: {get_param: KeystoneRegion}
+          heat::keystone::auth_cfn::region: {get_param: KeystoneRegion}
