Ensure all HostsDeployments finish before puppet
This makes sure that the Host settings for all deployments are finished
before starting the AllNodesDeployments which execute puppet.

Change-Id: Ibe604472255ce905ca2c1dca2a9b07a6f8f40e47
Related-bug: #1633565
(cherry picked from commit ccc3a569833ce13c472d48815eaeb153ec650b54)

--- a/overcloud.j2.yaml
+++ b/overcloud.j2.yaml
@@ -223,7 +223,10 @@ resources:
 
   {{role.name}}AllNodesDeployment:
     type: OS::Heat::StructuredDeployments
-    depends_on: {{role.name}}HostsDeployment
+    depends_on:
+{% for role_inner in roles %}
+      - {{role_inner.name}}HostsDeployment
+{% endfor %}
     properties:
       name: {{role.name}}AllNodesDeployment
       config: {get_attr: [allNodesConfig, config_id]}
