Allow user to configure Ceph rbd_default_features
Allow user to configure rbd_default_features parameter in
ceph.conf / [client] section. Operators deploying newer
Ceph clients that must use older Ceph servers need to be
able to easily set this option for backwards compatibility.

Change-Id: I685c95c47282894bb6309168c537de877dbccc66
Depends-On: I477640c5db2cc84622da7734fb54cfe7740bd137
Related-Bug: 1633552

--- a/environments/puppet-ceph-external.yaml
+++ b/environments/puppet-ceph-external.yaml
@@ -30,5 +30,8 @@ parameter_defaults:
   # finally we disable the Cinder LVM backend
   CinderEnableIscsiBackend: false
 
+  # Uncomment if connecting to a pre-Jewel or RHCS1.3 Ceph Cluster
+  # RbdDefaultFeatures: 1
+
   # Backward compatibility setting, will be removed in the future
   CephAdminKey: ''
