glance_multiple_locations when NovaEnableRbdBackend=true
glance_multiple_locations does not needed when the
NovaEnableRbdBackend=false, but it is neede when both the
image and the instance storage is rbd and
the show_image_direct_url is enabled.

The condition introduced in Ia7e0558e4f318640981abb44d188e3479b5eae69

Change-Id: Ia8a8cd9aeda69e9a7db6f95dcf418f56e29cae00
Closes-Bug: 1632285

--- a/puppet/services/ceph-base.yaml
+++ b/puppet/services/ceph-base.yaml
@@ -82,7 +82,7 @@ conditions:
       - rbd
     - equals:
       - get_param: NovaEnableRbdBackend
-      - false
+      - true
 
 outputs:
   role_data:
