Fix usage of SwiftRawDisks
Using the SwiftRawDisks parameter neither created the XFS filesystem nor
mounted the device, requiring manual intervention by an operaror.

Partial-Bug: 1634051
Change-Id: I2da0f12635a37c1f339a3be59a7d00f352adf283

--- a/puppet/services/swift-storage.yaml
+++ b/puppet/services/swift-storage.yaml
@@ -86,7 +86,7 @@ outputs:
             swift::storage::all::account_pipeline:
               - healthcheck
               - account-server
-            swift::storage::disks: {get_param: SwiftRawDisks}
+            swift::storage::disks::args: {get_param: SwiftRawDisks}
             swift::storage::all::storage_local_net_ip: {get_param: [ServiceNetMap, SwiftStorageNetwork]}
       step_config: |
         include ::tripleo::profile::base::swift::storage
