Fix api_extensions_path in neutron-opencontrail environment
There is a missing repositiry for LBaaS in api_extensions_path in neutron-opencontrail.
This patch is working in my lab : tripleo liberty and opencontrail 3.0.2

Closes-Bug: #1634120

Change-Id: Ie06612faf226d0e5e75f3f8a9b560118cba5ff4c
Signed-off-by: Cyril Lopez <cylopez@redhat.com>
(cherry picked from commit 2cd90e8f36ce07d40763fb3b92292194f9d9c173)

--- a/puppet/extraconfig/pre_deploy/controller/neutron-opencontrail.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/neutron-opencontrail.yaml
@@ -32,7 +32,7 @@ resources:
           datafiles:
             neutron_opencontrail_data:
               mapped_data:
-                neutron::api_extensions_path: /usr/lib/python2.7/site-packages/neutron_plugin_contrail/extensions
+                neutron::api_extensions_path: /usr/lib/python2.7/site-packages/neutron_plugin_contrail/extensions,/usr/lib/python2.7/site-packages/neutron_lbaas/extensions
 
                 neutron::plugins::opencontrail::api_server_ip: {get_input: contrail_api_server_ip}
                 neutron::plugins::opencontrail::api_server_port: {get_input: contrail_api_server_port}
