--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -97,6 +97,7 @@
     - OS::TripleO::Services::BarbicanApi
     - OS::TripleO::Services::PankoApi
     - OS::TripleO::Services::Zaqar
+    - OS::TripleO::Services::OVNDBs
 
 - name: Compute
   CountDefault: 1
