--- a/puppet/services/rabbitmq.yaml
+++ b/puppet/services/rabbitmq.yaml
@@ -71,6 +71,7 @@ outputs:
         rabbitmq::port: '5672'
         rabbitmq::package_source: undef
         rabbitmq::repos_ensure: false
+        rabbitmq::tcp_keepalive: true
         rabbitmq_environment:
           RABBITMQ_NODENAME: "rabbit@%{::hostname}"
           RABBITMQ_SERVER_ERL_ARGS: '"+K true +P 1048576 -kernel inet_default_connect_options [{nodelay,true},{raw,6,18,<<5000:64/native>>}] -kernel inet_default_listen_options [{raw,6,18,<<5000:64/native>>}]"'
@@ -78,7 +79,6 @@ outputs:
           inet_dist_listen_min: '25672'
           inet_dist_listen_max: '25672'
         rabbitmq_config_variables:
-          tcp_listen_options: '[binary, {packet, raw}, {reuseaddr, true}, {backlog, 128}, {nodelay, true}, {exit_on_close, false}, {keepalive, true}]'
           cluster_partition_handling: 'pause_minority'
           queue_master_locator: '<<"min-masters">>'
           loopback_users: '[]'
