Add missing Ceph endpoints from tls-everywhere environment
Change-Id: Ib945e570556e8e10e5bb07faa57270958c9eda99

--- a/environments/tls-everywhere-endpoints-dns.yaml
+++ b/environments/tls-everywhere-endpoints-dns.yaml
@@ -8,6 +8,9 @@ parameter_defaults:
     CeilometerAdmin: {protocol: 'https', port: '8777', host: 'CLOUDNAME'}
     CeilometerInternal: {protocol: 'https', port: '8777', host: 'CLOUDNAME'}
     CeilometerPublic: {protocol: 'https', port: '13777', host: 'CLOUDNAME'}
+    CephRgwAdmin: {protocol: 'https', port: '8080', host: 'CLOUDNAME'}
+    CephRgwInternal: {protocol: 'https', port: '8080', host: 'CLOUDNAME'}
+    CephRgwPublic: {protocol: 'https', port: '13808', host: 'CLOUDNAME'}
     CinderAdmin: {protocol: 'https', port: '8776', host: 'CLOUDNAME'}
     CinderInternal: {protocol: 'https', port: '8776', host: 'CLOUDNAME'}
     CinderPublic: {protocol: 'https', port: '13776', host: 'CLOUDNAME'}
