Use ::os_workers fact instead of ::processorcount
Change-Id: Ib25849565c617f32357ef545957f58454b2a53f8

--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -42,7 +42,7 @@ parameters:
   CinderWorkers:
     type: string
     description: Set the number of workers for cinder::wsgi::apache
-    default: '"%{::processorcount}"'
+    default: '"%{::os_workers}"'
 
 conditions:
   cinder_workers_zero: {equals : [{get_param: CinderWorkers}, 0]}
