--- a/puppet/services/keystone.yaml
+++ b/puppet/services/keystone.yaml
@@ -83,7 +83,7 @@ parameters:
   KeystoneWorkers:
     type: string
     description: Set the number of workers for keystone::wsgi::apache
-    default: '"%{::processorcount}"'
+    default: '"%{::os_workers}"'
   MonitoringSubscriptionKeystone:
     default: 'overcloud-kestone'
     type: string
