--- a/overcloud-resource-registry-puppet.j2.yaml
+++ b/overcloud-resource-registry-puppet.j2.yaml
@@ -205,3 +205,8 @@ resource_registry:
 parameter_defaults:
   EnablePackageInstall: false
   SoftwareConfigTransport: POLL_TEMP_URL
+
+{% for role in roles %}
+  # Parameters generated for {{role.name}} Role
+  {{role.name}}Services: {{role.ServicesDefault|default([])}}
+{% endfor %}
