Correct opencontrail hiera interpolation key
We reference keystone_auth_uri, but this isn't actually written as a
hieradata key in controller.yaml.  Intead we need to reference a
per-service key which contains the data (as these are written in
controller.yaml).  Using the neutron::server key seems reasonable since
this is enabling a neutron plugin.

Note this is a mitaka/liberty only fix because we fixed this already during
the refactoring of neutron-opencontrail.yaml into the composable services
format during the Newton cycle.

Change-Id: Id240709e256b057bbdff038aefc7fcacb0d339b8
Closes-Bug: 1638901

--- a/puppet/extraconfig/pre_deploy/controller/neutron-opencontrail.yaml
+++ b/puppet/extraconfig/pre_deploy/controller/neutron-opencontrail.yaml
@@ -38,7 +38,7 @@ resources:
                 neutron::plugins::opencontrail::api_server_port: {get_input: contrail_api_server_port}
                 neutron::plugins::opencontrail::multi_tenancy: {get_input: contrail_multi_tenancy}
                 neutron::plugins::opencontrail::contrail_extensions: {get_input: contrail_extensions}
-                neutron::plugins::opencontrail::keystone_auth_url: '"%{hiera(''keystone_auth_uri'')}"'
+                neutron::plugins::opencontrail::keystone_auth_url: '"%{hiera(''neutron::server::auth_uri'')}"'
                 neutron::plugins::opencontrail::keystone_admin_user: admin
                 neutron::plugins::opencontrail::keystone_admin_tenant_name: admin
                 neutron::plugins::opencontrail::keystone_admin_password: '"%{hiera(''admin_password'')}"'
