--- a/puppet/services/keystone.yaml
+++ b/puppet/services/keystone.yaml
@@ -85,7 +85,7 @@ parameters:
     description: Set the number of workers for keystone::wsgi::apache
     default: '"%{::processorcount}"'
   MonitoringSubscriptionKeystone:
-    default: 'overcloud-kestone'
+    default: 'overcloud-keystone'
     type: string
   KeystoneCredential0:
     type: string
