--- a/puppet/services/swift-proxy.yaml
+++ b/puppet/services/swift-proxy.yaml
@@ -99,6 +99,11 @@ outputs:
               - 'authtoken'
               - 'keystone'
               - 'staticweb'
+              - 'copy'
+              - 'container-quotas'
+              - 'account-quotas'
+              - 'slo'
+              - 'dlo'
               - 'versioned_writes'
               - 'ceilometer'
               - 'proxy-logging'
