--- a/ci/environments/scenario002-multinode.yaml
+++ b/ci/environments/scenario002-multinode.yaml
@@ -3,6 +3,7 @@ resource_registry:
   OS::TripleO::Compute::Net::SoftwareConfig: ../common/net-config-multinode.yaml
   OS::TripleO::Services::BarbicanApi: ../../puppet/services/barbican-api.yaml
   OS::TripleO::Services::Zaqar: ../../puppet/services/zaqar.yaml
+  OS::TripleO::Services::Ec2Api: ../../puppet/services/ec2-api.yaml
 
 parameter_defaults:
   ControllerServices:
@@ -45,6 +46,7 @@ parameter_defaults:
     - OS::TripleO::Services::BarbicanApi
     - OS::TripleO::Services::MongoDb
     - OS::TripleO::Services::Zaqar
+    - OS::TripleO::Services::Ec2Api
   ControllerExtraConfig:
     nova::compute::libvirt::services::libvirt_virt_type: qemu
     nova::compute::libvirt::libvirt_virt_type: qemu
